2001-10-26  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_Panel_TestApplet.server.in: s/TestApplet/Panel_TestApplet/g

	* applet-init.c, applet-init.h: crufty debugging functionality.
	(applet_debug_log), (applet_debug_init): impl.
	(applet_factory_main): use it.

	* extern.c: use Applet2 interface.

	* menu.c: (add_test_applet): s/TestApplet/Panel_TestApplet/g.

	* test-applet.c: use logging.

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* applet-widget.c, applet-widget.h: kill applet_widget_init.

	* applet-init.c, applet-init.h: new files - init related stuff
	for libpanel-applet-2.

	* GNOME_Panel_TestApplet.server.in,  test-applet.c:
	simple applet for testing purposes. It doesn't work.

	* Makefile.am: update build.

	* extern.c: cosmetics.

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* menu.c: (menus_have_icons): use gconf.

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (load_up_globals), (write_global_config),
	(convert_write_config): remove tile_when_over usage.

2001-10-25  Glynn Foster  <glynn.foster@sun.com>

	* panelglobalconfig.schema: First stab at creating 
	 a schema for the panel global config.

2001-10-25  Glynn Foster  <glynn.foster@sun.com>

	* panel_config_global.h: Remove some tile cruft.

2001-10-24  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add WARN_CFLAGS to INCLUDES. Clean up
	  panel-marshal rules. Build libpanel-applet-2. Install
	  applet headers in gnome-2.0/panel/applet.

	* libpanelapplet-2.0.pc.in: update.

	* applet-object.c: s/IS_APPLET_OBJECT/APPLET_IS_OBJECT/.
	(applet_object_panel): return panel_client.
	(applet_object_panel_quit): impl.
	(impl_GNOME_Applet2_do_callback): kill unused variable.

	* applet-widget.c: 
	(marshal_signal_save), (marshal_signal_back):
	s/G_CLOSURE_SWAP_DATA/G_CCLOSURE_SWAP_DATA/
	(applet_widget_destroy): use gtk_main_quit ().
	(gnome_panel_client): kill.
	(applet_widget_get_rgb_background): rename from
	applet_widget_get_rgb_bg.