@@ -985,121 +985,3 @@ applet_widget_thaw_changes (AppletWidget *widget)
 				 widget->priv->frozen_position_y);
 	}
 }
-
-#ifdef FIXME
-
-typedef struct {
-	POA_GNOME_GenericFactory        servant;
-
-	AppletFactoryActivator          afunc;
-	AppletFactoryQuerier            qfunc;
-
-	CORBA_Object                    fobj;
-	PortableServer_ObjectId        *objid;
-} AppletFactory;
-
-static CORBA_boolean
-server_applet_factory_supports (PortableServer_Servant  servant,
-				const CORBA_char       *iid,
-				CORBA_Environment      *ev)
-{
-	AppletFactory *factory_servant = (AppletFactory *)servant;
-
-	if (factory_servant->qfunc)
-		return factory_servant->qfunc (iid);
-
-	g_message ("No AppletFactoryQuerier to check on %s in panel applet", iid);
-
-	return CORBA_FALSE;
-}
-
-static CORBA_Object
-server_applet_factory_create_object (PortableServer_Servant  servant,
-				     const CORBA_char       *iid,
-				     const GNOME_stringlist *params,
-				     CORBA_Environment      *ev)
-{
-	AppletFactory *factory_servant = (AppletFactory *)_servant;
-	GtkWidget     *applet;
-
-	applet = servant->afunc (iid, params->_buffer, params->_length);
-	if (!applet) {
-		g_warning (_("Activator failed to create an object."));
-		return CORBA_OBJECT_NIL;
-	}
-
-	if (!IS_APPLET_WIDGET (applet)) {
-		g_warning (_("Activator failed to create an AppletWidget."));
-		gtk_widget_destroy (applet);
-		return CORBA_OBJECT_NIL;
-	}
-
-	return CORBA_Object_duplicate (CD(applet)->obj, ev);
-}
-
-static POA_GNOME_GenericFactory__epv applet_factory_epv = {
-	NULL,
-	server_applet_factory_supports,
-	server_applet_factory_create_object
-};
-
-static POA_GNOME_GenericFactory__vepv applet_factory_vepv = {
-	&base_epv,
-	&applet_factory_epv
-};
-
-/**
- * applet_factory_new:
- * @iid: the implementation id of the factory to be registered.
- * @qfunc: #AppletFactoryQuerier to determine whether an applet with
- * a specified GOAD ID can be created.
- * @afunc: #AppletFactoryActivator to activate a specified GOAD ID.
- *
- * Description: create a new applet factory.  It is used for applets
- * that can run many applets from one process.
- **/
-void
-applet_factory_new (const char             *iid,
-		    AppletFactoryQuerier    qfunc,
-		    AppletFactoryActivator  afunc)
-{
-	POA_GNOME_GenericFactory *factory;
-	AppletFactory            *applet_factory;
-	CORBA_Environment         env;
-	CORBA_Object              obj;
-
-	g_return_if_fail (afunc);
-
-	CORBA_exception_init (&env);
-
-	poa = bonobo_poa ();
-
-	applet_factory = g_new0 (AppletFactory, 1);
-
-	factory = (POA_GNOME_GenericFactory *)applet_factory
-
-	factory->servant.vepv = &applet_factory_vepv;
-
-
-	POA_GNOME_GenericFactory__init (factory, &env);
-
-	obj = PortableServer_POA_servant_to_reference (bonobo_poa (),  
-						       factory, &env);
-	if (BONOBO_EX (&env)) {
-		CORBA_exception_free (&env);
-		g_free (applet_factory);
-		return;
-	}
-
-	applet_factory->afunc = afunc;
-	applet_factory->qfunc = qfunc;
-	applet_factory->fobj  = obj;
-
-	bonobo_activation_active_server_register (iid, obj);
-
-	CORBA_Object_release (obj, &env);
-
-	CORBA_exception_free (&env);
-}
-
-#endif /* FIXME */
