@@ -1,3 +1,11 @@
+2001-10-31  Mark McLoughlin  <mark@skynet.ie>
+
+	* applet-widget.c: kill old goad factory stuff.
+
+	* applet.c, applet.h, extern.c, panel-widget.c:
+	move various definitions of APPLET_EVENT_MASK to
+	applet.h.
+
 2001-10-26  Mark McLoughlin  <mark@skynet.ie>
 
 	* GNOME_Panel_TestApplet.server.in: s/TestApplet/Panel_TestApplet/g
